docdir = $(datadir)/liblouisxml/doc

doc_DATA = \
	copyright-notice \
	example_canonical.cfg \
	example_default.cfg \
	example_html.sem \
	example_math.sem \
	liblouisxml-guide.html \
	liblouisxml-guide.txt

EXTRA_DIST = \
	copyright-notice \
	example_canonical.cfg \
	example_default.cfg \
	example_html.sem \
	example_math.sem \
	liblouisxml-guide.html \
	liblouisxml-guide.txt

